--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "gulp-uglify": "^3.0.2",
     "gulp-webserver": "^0.9.1",
     "node-sass": "^4.12.0"
+  },
+  "dependencies": {
+    "gulp-file-include": "^2.0.1"
   }
 }
